test/errors/include2.input.asm

    lda #0
!include 13
    lda #1
